Sutter Health/src/objects/Employee_Solutions__c.object
<CustomObject>
    <fields>
        <fullName>Action_Comments__c</fullName>
        <description>Comments related to disciplinary action</description>
        <label>Action Comments</label>
        <length>62768</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>Contact_Ann_Date__c</fullName>
        <formula>Contact__r.Employee_Anniversary_Date__c</formula>
        <label>Contact Anniversary Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Contact_Department__c</fullName>
        <formula>Contact__r.Employee_Department__c</formula>
        <label>Contact Department</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Contact_ID__c</fullName>
        <formula>Contact__r.Employee_ID__c</formula>
        <label>Contact ID</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Contact_Job_Code_Desc__c</fullName>
        <formula>Contact__r.Employee_Job_Code_Description__c</formula>
        <label>Contact Job Code Description</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Contact_Job_Code__c</fullName>
        <formula>Contact__r.Employee_Job_Code__c</formula>
        <label>Contact Job Code</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Contact_Status__c</fullName>
        <formula>Contact__r.Employee_Employment_Status__c</formula>
        <label>Contact Status</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Contact_Supervisor__c</fullName>
        <formula>Contact__r.Employee_Supervisor_Name__c</formula>
        <label>Contact Supervisor</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Contact__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <inlineHelpText>Who is the person (other than the subject) that you are working on with this matter?</inlineHelpText>
        <label>Contact</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Employee Solutions (Contact)</relationshipLabel>
        <relationshipName>Employee_Solutions_Contact</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Contacted_By__c</fullName>
        <label>Contacted By</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Lead</fullName>
                </value>
                <value>
                    <fullName>Employee</fullName>
                </value>
                <value>
                    <fullName>Compliance</fullName>
                </value>
                <value>
                    <fullName>Other</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Disciplinary_Action__c</fullName>
        <label>Disciplinary Action</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>No</fullName>
                </value>
                <value>
                    <fullName>Written</fullName>
                </value>
                <value>
                    <fullName>Final Warning</fullName>
                </value>
                <value>
                    <fullName>Suspension</fullName>
                </value>
                <value>
                    <fullName>Termination</fullName>
                </value>
                <value>
                    <fullName>Verbal Coaching</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Disciplinary_Comments__c</fullName>
        <label>Disciplinary Comments</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Emp_Supervisor__c</fullName>
        <formula>Employee__r.Employee_Supervisor_Name__c</formula>
        <label>Emp Supervisor</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Employee_Anniversary_Date__c</fullName>
        <formula>Employee__r.Employee_Anniversary_Date__c</formula>
        <label>Employee Anniversary Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Employee_ID__c</fullName>
        <formula>Employee__r.Employee_ID__c</formula>
        <label>Employee ID</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Employee_Job_Code_Desc__c</fullName>
        <formula>Employee__r.Employee_Job_Code_Description__c</formula>
        <label>Employee Job Code Desc</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Employee_Job_Code__c</fullName>
        <formula>Employee__r.Employee_Job_Code__c</formula>
        <label>Employee Job Code</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Employee__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <inlineHelpText>Name of employee</inlineHelpText>
        <label>Employee</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Employee Solutions Interactions</relationshipLabel>
        <relationshipName>Employee_Solutions1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Entered_in_Lawson__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>Was this entered into Lawson?</inlineHelpText>
        <label>Entered in Lawson</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Function__c</fullName>
        <label>Function</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Rev Cycle</fullName>
                </value>
                <value>
                    <fullName>HR</fullName>
                </value>
                <value>
                    <fullName>Supply Chain</fullName>
                </value>
                <value>
                    <fullName>Contact Center</fullName>
                </value>
                <value>
                    <fullName>Svc and Perf Mgmt</fullName>
                </value>
                <value>
                    <fullName>Finance</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Indexed_to_ePR__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Indexed to ePR?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Initial_Contact__c</fullName>
        <inlineHelpText>What date was this issue brought up to Employee Relations?</inlineHelpText>
        <label>Initial Contact</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Lead__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <inlineHelpText>What Lead are you working with for this request?</inlineHelpText>
        <label>Lead</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Employee Solutions (Lead)</relationshipLabel>
        <relationshipName>Employee_Solutions2</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Notes__c</fullName>
        <label>Notes</label>
        <length>62768</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>Origin__c</fullName>
        <label>Origin</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Electronic (e-mail or IM)</fullName>
                </value>
                <value>
                    <fullName>Phone</fullName>
                </value>
                <value>
                    <fullName>In-Person</fullName>
                </value>
                <value>
                    <fullName>Contact Center</fullName>
                </value>
                <value>
                    <fullName>Other</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Outcome__c</fullName>
        <label>Outcome</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Conversation</fullName>
                </value>
                <value>
                    <fullName>Referred to Lead</fullName>
                </value>
                <value>
                    <fullName>Referred to Leader</fullName>
                </value>
                <value>
                    <fullName>Referred to SSLT</fullName>
                </value>
                <value>
                    <fullName>Referred to Ed</fullName>
                </value>
                <value>
                    <fullName>PIP</fullName>
                </value>
                <value>
                    <fullName>DAN</fullName>
                </value>
                <value>
                    <fullName>Termination</fullName>
                </value>
                <value>
                    <fullName>Job Description Review</fullName>
                </value>
                <value>
                    <fullName>Change Control</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Primary_Topic__c</fullName>
        <inlineHelpText>What was the interaction regarding?</inlineHelpText>
        <label>Primary Topic</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Attendance</fullName>
                </value>
                <value>
                    <fullName>Conduct_Behavior</fullName>
                </value>
                <value>
                    <fullName>Performance</fullName>
                </value>
                <value>
                    <fullName>Harassment</fullName>
                </value>
                <value>
                    <fullName>Discrimination</fullName>
                </value>
                <value>
                    <fullName>Job Change</fullName>
                </value>
                <value>
                    <fullName>Other</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Re_Opened_Date__c</fullName>
        <label>Re-Opened Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Related_Log__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Related To</label>
        <referenceTo>Employee_Solutions__c</referenceTo>
        <relationshipLabel>Related Employee Solutions</relationshipLabel>
        <relationshipName>Employee_Solutions</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Root_Cause__c</fullName>
        <inlineHelpText>What root cause can this problem be attributed too?</inlineHelpText>
        <label>Root Cause</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>No System Failsafe</fullName>
                </value>
                <value>
                    <fullName>Poor Policy</fullName>
                </value>
                <value>
                    <fullName>Skill Mismatch</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Status__c</fullName>
        <label>Status</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Open</fullName>
                </value>
                <value>
                    <fullName>Closed</fullName>
                </value>
                <value>
                    <fullName>Re-Opened</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Sub_Function__c</fullName>
        <label>Sub Function</label>
        <type>Picklist</type>
        <valueSet>
            <controllingField>Function__c</controllingField>
            <valueSetDefinition>
                <value>
                    <fullName>CBO</fullName>
                </value>
                <value>
                    <fullName>PAC</fullName>
                </value>
                <value>
                    <fullName>HIM</fullName>
                </value>
                <value>
                    <fullName>CDM</fullName>
                </value>
                <value>
                    <fullName>Data &amp; Analytics</fullName>
                </value>
                <value>
                    <fullName>Education</fullName>
                </value>
                <value>
                    <fullName>Compensation</fullName>
                </value>
                <value>
                    <fullName>Benefits</fullName>
                </value>
                <value>
                    <fullName>Recruitment</fullName>
                </value>
                <value>
                    <fullName>Learning and Delivery and Administration</fullName>
                </value>
                <value>
                    <fullName>HRIS</fullName>
                </value>
                <value>
                    <fullName>Workforce Relations</fullName>
                </value>
                <value>
                    <fullName>Credentialing Verification</fullName>
                </value>
                <value>
                    <fullName>Employee Solutions</fullName>
                </value>
                <value>
                    <fullName>Supply Chain</fullName>
                </value>
                <value>
                    <fullName>eQuip</fullName>
                </value>
                <value>
                    <fullName>Contact Center</fullName>
                </value>
                <value>
                    <fullName>DMC</fullName>
                </value>
                <value>
                    <fullName>Svc and Perf Mgmt</fullName>
                </value>
                <value>
                    <fullName>Accounts Payable</fullName>
                </value>
                <value>
                    <fullName>Payroll</fullName>
                </value>
                <value>
                    <fullName>Accounting</fullName>
                </value>
                <value>
                    <fullName>Accounts Receivable Account and Managed Care</fullName>
                </value>
                <value>
                    <fullName>Standard Reporting, Audit, and Systems</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Subject__c</fullName>
        <inlineHelpText>Granular detail of Primary Topic</inlineHelpText>
        <label>Subject</label>
        <type>Picklist</type>
        <valueSet>
            <controllingField>Primary_Topic__c</controllingField>
            <valueSetDefinition>
                <value>
                    <fullName>Excessive Unscheduled Absences</fullName>
                </value>
                <value>
                    <fullName>Tardiness</fullName>
                </value>
                <value>
                    <fullName>Leave Early</fullName>
                </value>
                <value>
                    <fullName>Leave of absence/disability related</fullName>
                </value>
                <value>
                    <fullName>HIPPAA/PHI</fullName>
                </value>
                <value>
                    <fullName>Policy compliance</fullName>
                </value>
                <value>
                    <fullName>Fitness for duty</fullName>
                </value>
                <value>
                    <fullName>Other Violation of Policies and Procedures</fullName>
                </value>
                <value>
                    <fullName>Discrimination/Harassment in the workplace</fullName>
                </value>
                <value>
                    <fullName>Work rules</fullName>
                </value>
                <value>
                    <fullName>Workplace threats or violence</fullName>
                </value>
                <value>
                    <fullName>Dress code/appearance</fullName>
                </value>
                <value>
                    <fullName>Insubordination</fullName>
                </value>
                <value>
                    <fullName>Disruptive behavior</fullName>
                </value>
                <value>
                    <fullName>Legal issues</fullName>
                </value>
                <value>
                    <fullName>Failure to follow instructions</fullName>
                </value>
                <value>
                    <fullName>Quality of work</fullName>
                </value>
                <value>
                    <fullName>Failure to meet Introductory</fullName>
                </value>
                <value>
                    <fullName>Quantity of work</fullName>
                </value>
                <value>
                    <fullName>Engagement/Job Satisfaction</fullName>
                </value>
                <value>
                    <fullName>Dissatisfied with Leader</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <label>Employee Solutions</label>
    <listViews>
        <fullName>All_Open_Logs</fullName>
        <columns>NAME</columns>
        <columns>Contact__c</columns>
        <columns>Disciplinary_Action__c</columns>
        <columns>Employee__c</columns>
        <columns>Primary_Topic__c</columns>
        <columns>Sub_Function__c</columns>
        <columns>Subject__c</columns>
        <columns>OWNER.FIRST_NAME</columns>
        <columns>CREATED_DATE</columns>
        <columns>LAST_UPDATE</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>RECORDTYPE</field>
            <operation>equals</operation>
            <value>Employee_Solutions__c.ER_Log</value>
        </filters>
        <filters>
            <field>Status__c</field>
            <operation>notEqual</operation>
            <value>Closed</value>
        </filters>
        <label>All Open Logs</label>
    </listViews>
    <nameField>
        <displayFormat>ER{00000}</displayFormat>
        <label>Employee Solution Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Employee Solutions</pluralLabel>
    <recordTypes>
        <fullName>ER_Log</fullName>
        <active>true</active>
        <label>ER Log</label>
    </recordTypes>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>